--- a/Assignment/nbproject/project.properties
+++ b/Assignment/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Assignment
+application.vendor=minhg
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Assignment.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Assignment
+endorsed.classpath=
 excludes=
 file.reference.flatlaf-demo-3.5.4.jar=src\\lib\\flatlaf-demo-3.5.4.jar
 file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\minhg\\OneDrive\\Desktop\\MiniProject\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Assignment
-main.class=src.View.Login
+main.class=src.View.Screen.View_Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -86,7 +88,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Dsun.stdout.encoding=UTF-8
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
