--- a/Assignment/nbproject/project.properties
+++ b/Assignment/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/Assignment
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-demo-3.5.4.jar=src\\lib\\flatlaf-demo-3.5.4.jar
+file.reference.jbcrypt-0.4.jar=src\\lib\\jbcrypt-0.4.jar
 file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\minhg\\OneDrive\\Desktop\\MiniProject\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
-    ${file.reference.flatlaf-demo-3.5.4.jar}
+    ${file.reference.flatlaf-demo-3.5.4.jar}:\
+    ${file.reference.jbcrypt-0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
